Agregue otra section

--- a/main-principal/index.html
+++ b/main-principal/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <section></section>
+        <section></section>
+        <section></section>
+    </header>
+    <main>
+        <article></article>
+        <article></article>
+    </main>
+    <section>
+        <article></article>
+    </section>
 </body>
 </html>
