aplique otro article y metodologia bem

--- a/main-principal/index.html
+++ b/main-principal/index.html
@@ -6,17 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <section></section>
-        <section></section>
-        <section></section>
+    <header class="header">
+        <section class="header_1"></section>
+        <section class="header_2"></section>
+        <section class="header_3"></section>
     </header>
-    <main>
-        <article></article>
+    <main class="main">
+        <article class="main_article"></article>
+        <article class="main_article_2"></article>
         <article></article>
     </main>
-    <section>
-        <article></article>
+    <section class="section">
+        <article class="section_hije"></article>
     </section>
 </body>
 </html>
