agregue el footer con su id

--- a/main-principal/index.html
+++ b/main-principal/index.html
@@ -19,5 +19,9 @@
     <section class="section">
         <article class="section_hije"></article>
     </section>
+    <footer id="foooter">
+        <section id="footer_1"></section>
+        <section id="footer_2"></section>
+    </footer>
 </body>
 </html>
